apps/production/workers/worker01/services/ui/pre-release/resources/ui-envoy-config.yaml
resources:
  config-map-ui-envoy-config:
    kind: ConfigMap
    apiVersion: v1
    metadata:
      name: ui-envoy-config
    data:
      envoy.yaml: |-
        static_resources:
          listeners:
            - name: inbound_envoy_https
              address:
                socket_address:
                  address: 0.0.0.0
                  port_value: 8443
              filter_chains:
                - filters:
                  - name: envoy.filters.network.http_connection_manager
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                      stat_prefix: ingress_https
                      use_remote_address: true
                      xff_num_trusted_hops: 1
                      skip_xff_append: false
                      common_http_protocol_options:
                        idle_timeout: 1s
                      access_log:
                        - name: envoy.access_loggers.stdout
                          typed_config:
                            "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      http_filters:
                        - name: envoy.filters.http.ratelimit
                          typed_config:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
                            domain: ui
                            timeout: 10s
                            request_type: both
                            stage: 0
                            rate_limited_as_resource_exhausted: true
                            failure_mode_deny: true
                            failure_mode_deny_percent:
                              default_value:
                                numerator: 100
                                denominator: HUNDRED
                              runtime_key: ratelimit.failure_mode_deny_percent
                            enable_x_ratelimit_headers: DRAFT_VERSION_03
                            filter_enforced:
                              runtime_key: "ratelimit.filter_enforced"
                              default_value:
                                numerator: 100
                                denominator: HUNDRED
                            rate_limit_service:
                              grpc_service:
                                envoy_grpc:
                                  cluster_name: ratelimit
                                  retry_policy:
                                    num_retries: 3
                                timeout: 30s
                              transport_api_version: V3
                        - name: envoy.filters.http.router
                          typed_config:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      route_config:
                        virtual_hosts:
                          - name: gateway
                            domains: ["*"]
                            require_tls: ALL
                            routes:
                              # UI5 cache-buster handling
                              - match:
                                  safe_regex:
                                    regex: '.*/(index\.html|sap-ui-cachebuster-info\.json)$'
                                route:
                                  cluster: ui
                                  rate_limits:
                                    - actions:
                                        - generic_key:
                                            descriptor_value: global
                                    - actions:
                                        - remote_address: {}
                                      stage: 0
                                response_headers_to_add:
                                  - header:
                                      key: Cache-Control
                                      value: "no-cache, must-revalidate, max-age=0"
                              - match:
                                  safe_regex:
                                    regex: "^/(.*)/~[0-9]+~/(.*)$"
                                route:
                                  cluster: ui
                                  regex_rewrite:
                                    pattern:
                                      regex: "^/(.*)/~[0-9]+~/(.*)$"
                                    substitution: "/\\1/\\2"
                                  rate_limits:
                                    - actions:
                                        - generic_key:
                                            descriptor_value: global
                                    - actions:
                                        - remote_address: {}
                                      stage: 0
                                response_headers_to_add:
                                  - header:
                                      key: Cache-Control
                                      value: "public, max-age=31536000, immutable"
                              - match:
                                  safe_regex:
                                    regex: "^/~[0-9]+~/(.*)$"
                                route:
                                  cluster: ui
                                  regex_rewrite:
                                    pattern:
                                      regex: "^/~[0-9]+~/(.*)$"
                                    substitution: "/\\1"
                                  rate_limits:
                                    - actions:
                                        - generic_key:
                                            descriptor_value: global
                                    - actions:
                                        - remote_address: {}
                                      stage: 0
                                response_headers_to_add:
                                  - header:
                                      key: Cache-Control
                                      value: "public, max-age=31536000, immutable"
                              - match:
                                  prefix: "/"
                                route:
                                  cluster: ui
                  transport_socket:
                    name: envoy.transport_sockets.tls
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                      require_client_certificate: false
                      common_tls_context:
                        alpn_protocols:
                          - h2
                          - http/1.1
                        tls_certificates:
                          - certificate_chain:
                              filename: /etc/server/certificates/tls.crt
                            private_key:
                              filename: /etc/server/certificates/tls.key
                        validation_context:
                          trusted_ca:
                            filename: /etc/server/certificates/ca.crt
          clusters:
            - name: ui
              connect_timeout: 3s
              type: static
              load_assignment:
                cluster_name: ui
                endpoints:
                  - lb_endpoints:
                      - endpoint:
                          address:
                            socket_address:
                              address: 127.0.0.1
                              port_value: 8080
            - name: ratelimit
              connect_timeout: 5s
              type: STRICT_DNS
              lb_policy: ROUND_ROBIN
              http2_protocol_options: {}
              circuit_breakers:
                thresholds:
                  - priority: DEFAULT
                    max_requests: 2000
                    max_pending_requests: 2000
                    max_retries: 5
              health_checks:
                - timeout: 3s
                  interval: 5s
                  unhealthy_threshold: 3
                  healthy_threshold: 1
                  tcp_health_check: {}
              load_assignment:
                cluster_name: ratelimit
                endpoints:
                  - lb_endpoints:
                      - endpoint:
                          address:
                            socket_address:
                              address: ratelimit.envoy-gateway-system.svc.cluster.local
                              port_value: 8081
              common_http_protocol_options:
                idle_timeout: 60s
